--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,12 +6,12 @@
 	//"image": "mcr.microsoft.com/devcontainers/universal:2-linux",
 	"build": { "dockerfile": "dev.dockerfile" },
 	"runArgs": [
-        "-p", "5000:5000"
+        //"-p", "5000:5000"
     ],
 	"features": {},
 	"forwardPorts": [5000],
 	"postCreateCommand": [
-		//"pip install -r requirements.txt",
+		"pip install -r backend/requirements.txt"
 	],
 	"customizations": {
 		"vscode": {
